--- a/portfolio.html
+++ b/portfolio.html
@@ -29,12 +29,12 @@
 
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a href="./index.html" class="navigation-link current-link"
-                >Студия</a
-              >
+              <a href="./index.html" class="navigation-link">Студия</a>
             </li>
             <li class="navigation-item">
-              <a href="./portfolio.html" class="navigation-link">Портфолио</a>
+              <a href="./portfolio.html" class="navigation-link current-link"
+                >Портфолио</a
+              >
             </li>
             <li class="navigation-item">
               <a href="" class="navigation-link">Контакты</a>
@@ -91,144 +91,209 @@
           <ul class="products-list">
             <li class="product-card">
               <a href="" class="product-link">
-                <img
-                src="./images/product1.jpg"
-                alt="Изображение проекта Технокряк"
-                width="370"
-                class="product-photo"
-              />
-              <div class="figurecaption">
-                <h2 class="product-name">Технокряк</h2>
-                <p class="product-type">Веб-сайт</p>
-              </div>
+                <div class="product-card-thumb">
+                  <img
+                  src="./images/product1.jpg"
+                  alt="Изображение проекта Технокряк"
+                  width="370"
+                  class="product-photo"
+                  />
+                  <p class="product-desc">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+                <div class="figurecaption">
+                  <h2 class="product-name">Технокряк</h2>
+                  <p class="product-type">Веб-сайт</p>
+                </div>
               </a>
             </li>
 
             <li class="product-card">
               <a href="" class="product-link">
-                <img
-                src="./images/product2.jpg"
-                alt="Изображение проекта Постер New Orlean vs Golden Star"
-                width="370"
-                class="product-photo"
-              />
-              <div class="figurecaption">
-                <h2 class="product-name">
-                  Постер <span lang="en">New Orlean vs Golden Star</span>
-                </h2>
-                <p class="product-type">Дизайн</p>
-              </div>
+                <div class="product-card-thumb">
+                  <img
+                  src="./images/product2.jpg"
+                  alt="Изображение проекта Постер New Orlean vs Golden Star"
+                  width="370"
+                  class="product-photo"
+                  />
+                  <p class="product-desc">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+                <div class="figurecaption">
+                  <h2 class="product-name">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
+                  <p class="product-type">Дизайн</p>
+                </div>
               </a>
             </li>
 
             <li class="product-card">
               <a href="" class="product-link">
-                <img
-                src="./images/product3.jpg"
-                alt="Изображение проекта Ресторан Seafood"
-                width="370"
-                class="product-photo"
-              />
-              <div class="figurecaption">
-                <h2 class="product-name">
-                  Ресторан <span lang="en">Seafood</span>
-                </h2>
-                <p class="product-type">Приложение</p>
-              </div>
+                <div class="product-card-thumb">
+                  <img
+                  src="./images/product3.jpg"
+                  alt="Изображение проекта Ресторан Seafood"
+                  width="370"
+                  class="product-photo"
+                  />
+                  <p class="product-desc">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+                <div class="figurecaption">
+                  <h2 class="product-name">
+                    Ресторан <span lang="en">Seafood</span>
+                  </h2>
+                  <p class="product-type">Приложение</p>
+                </div>
               </a>
             </li>
 
             <li class="product-card">
               <a href="" class="product-link">
-                <img
-                src="./images/product4.jpg"
-                alt="Изображение проекта Prime"
-                width="370"
-                class="product-photo"
-              />
-              <div class="figurecaption">
-                <h2 class="product-name">
-                  Проект <span lang="en">Prime</span>
-                </h2>
-                <p class="product-type">Маркетинг</p>
-              </div>
+                <div class="product-card-thumb">
+                  <img
+                  src="./images/product4.jpg"
+                  alt="Изображение проекта Prime"
+                  width="370"
+                  class="product-photo"
+                  />
+                  <p class="product-desc">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+                <div class="figurecaption">
+                  <h2 class="product-name">
+                    Проект <span lang="en">Prime</span>
+                  </h2>
+                  <p class="product-type">Маркетинг</p>
+                </div>
               </a>
             </li>
 
             <li class="product-card">
               <a href="" class="product-link">
-                <img
-                src="./images/product5.jpg"
-                alt="Изображение проекта Boxes"
-                width="370"
-                class="product-photo"
-              />
-              <div class="figurecaption">
-                <h2 class="product-name">
-                  Проект <span lang="en">Boxes</span>
-                </h2>
-                <p class="product-type">Приложение</p>
-              </div>
+                <div class="product-card-thumb">
+                  <img
+                  src="./images/product5.jpg"
+                  alt="Изображение проекта Boxes"
+                  width="370"
+                  class="product-photo"
+                  />
+                  <p class="product-desc">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+                <div class="figurecaption">
+                  <h2 class="product-name">
+                    Проект <span lang="en">Boxes</span>
+                  </h2>
+                  <p class="product-type">Приложение</p>
+                </div>
               </a>
             </li>
 
             <li class="product-card">
               <a href="" class="product-link">
-                <img
-                src="./images/product6.jpg"
-                alt="Изображение проекта веб-сайта Inspiration has no Borders"
-                width="370"
-                class="product-photo"
-              />
-              <div class="figurecaption">
-                <h2 lang="en" class="product-name">
-                  Inspiration has no Borders
-                </h2>
-                <p class="product-type">Веб-сайт</p>
-              </div>
+                <div class="product-card-thumb">
+                  <img
+                  src="./images/product6.jpg"
+                  alt="Изображение проекта веб-сайта Inspiration has no Borders"
+                  width="370"
+                  class="product-photo"
+                  />
+                  <p class="product-desc">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+                <div class="figurecaption">
+                  <h2 lang="en" class="product-name">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="product-type">Веб-сайт</p>
+                </div>
               </a>
             </li>
 
             <li class="product-card">
               <a href="" class="product-link">
-                <img
-                src="./images/product7.jpg"
-                alt="Изображение проекта издания Limited Edition"
-                width="370"
-                class="product-photo"
-              />
-              <div class="figurecaption">
-                <h2 class="product-name">
-                  Издание <span lang="en">Limited Edition</span>
-                </h2>
-                <p class="product-type">Дизайн</p>
-              </div>
+                <div class="product-card-thumb">
+                  <img
+                  src="./images/product7.jpg"
+                  alt="Изображение проекта издания Limited Edition"
+                  width="370"
+                  class="product-photo"
+                  />
+                  <p class="product-desc">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+                <div class="figurecaption">
+                  <h2 class="product-name">
+                    Издание <span lang="en">Limited Edition</span>
+                  </h2>
+                  <p class="product-type">Дизайн</p>
+                </div>
               </a>
             </li>
 
             <li class="product-card">
               <a href="" class="product-link">
-                <img
-                src="./images/product8.jpg"
-                alt="Изображение проекта LAB"
-                width="370"
-                class="product-photo"
-              />
-              <div class="figurecaption">
-                <h2 class="product-name">Проект <span lang="en">LAB</span></h2>
-                <p class="product-type">Маркетинг</p>
-              </div>
+                <div class="product-card-thumb">
+                  <img
+                  src="./images/product8.jpg"
+                  alt="Изображение проекта LAB"
+                  width="370"
+                  class="product-photo"
+                  />
+                  <p class="product-desc">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+                <div class="figurecaption">
+                  <h2 class="product-name">
+                    Проект <span lang="en">LAB</span>
+                  </h2>
+                  <p class="product-type">Маркетинг</p>
+                </div>
               </a>
             </li>
 
             <li class="product-card">
               <a href="" class="product-link">
-                <img
+                <div class="product-card-thumb">
+                  <img
                   src="./images/product9.jpg"
                   alt="Изображение проекта Приложения Growing Business"
                   width="370"
                   class="product-photo"
-                />
+                  />
+                  <p class="product-desc">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="figurecaption">
                   <h2 lang="en" class="product-name">Growing Business</h2>
                   <p class="product-type">Приложение</p>
