--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -29,15 +29,15 @@
 
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a href="./index.html" class="navigation-link">Студия</a>
+              <a href="./index.html" class="navigation-link">Студія</a>
             </li>
             <li class="navigation-item">
               <a href="./portfolio.html" class="navigation-link current-link"
-                >Портфолио</a
+                >Портфоліо</a
               >
             </li>
             <li class="navigation-item">
-              <a href="" class="navigation-link">Контакты</a>
+              <a href="" class="navigation-link">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -66,7 +66,7 @@
     <main>
       <section class="section products">
         <div class="container">
-          <h1 class="title visually-hidden">Наши работы</h1>
+          <h1 class="title visually-hidden">Наші роботи</h1>
 
           <ul class="filters-list">
             <li class="filter-item">
@@ -75,10 +75,10 @@
               </button>
             </li>
             <li class="filter-item">
-              <button type="button" class="filter-button">Веб-сайты</button>
+              <button type="button" class="filter-button">Веб-сайти</button>
             </li>
             <li class="filter-item">
-              <button type="button" class="filter-button">Приложения</button>
+              <button type="button" class="filter-button">Додатки</button>
             </li>
             <li class="filter-item">
               <button type="button" class="filter-button">Дизайн</button>
@@ -91,18 +91,21 @@
           <ul class="products-list">
             <li class="product-card">
               <a href="" class="product-link">
-                <div class="product-card-thumb">
+                <div class="product-thumb">
                   <img
-                  src="./images/product1.jpg"
-                  alt="Изображение проекта Технокряк"
-                  width="370"
-                  class="product-photo"
+                    src="./images/product1.jpg"
+                    alt="Фото проєкту Технокряк"
+                    width="370"
+                    class="product-photo"
                   />
-                  <p class="product-desc">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                  <div class="overlay">
+                    <p class="product-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="figurecaption">
                   <h2 class="product-name">Технокряк</h2>
@@ -113,18 +116,21 @@
 
             <li class="product-card">
               <a href="" class="product-link">
-                <div class="product-card-thumb">
+                <div class="product-thumb">
                   <img
-                  src="./images/product2.jpg"
-                  alt="Изображение проекта Постер New Orlean vs Golden Star"
-                  width="370"
-                  class="product-photo"
+                    src="./images/product2.jpg"
+                    alt="Изображение проекта Постер New Orlean vs Golden Star"
+                    width="370"
+                    class="product-photo"
                   />
-                  <p class="product-desc">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                  <div class="overlay">
+                    <p class="product-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="figurecaption">
                   <h2 class="product-name">
@@ -137,46 +143,52 @@
 
             <li class="product-card">
               <a href="" class="product-link">
-                <div class="product-card-thumb">
+                <div class="product-thumb">
                   <img
-                  src="./images/product3.jpg"
-                  alt="Изображение проекта Ресторан Seafood"
-                  width="370"
-                  class="product-photo"
+                    src="./images/product3.jpg"
+                    alt="Изображение проекта Ресторан Seafood"
+                    width="370"
+                    class="product-photo"
                   />
-                  <p class="product-desc">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                  <div class="overlay">
+                    <p class="product-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="figurecaption">
                   <h2 class="product-name">
                     Ресторан <span lang="en">Seafood</span>
                   </h2>
-                  <p class="product-type">Приложение</p>
+                  <p class="product-type">Додаток</p>
                 </div>
               </a>
             </li>
 
             <li class="product-card">
               <a href="" class="product-link">
-                <div class="product-card-thumb">
+                <div class="product-thumb">
                   <img
-                  src="./images/product4.jpg"
-                  alt="Изображение проекта Prime"
-                  width="370"
-                  class="product-photo"
+                    src="./images/product4.jpg"
+                    alt="Изображение проекта Prime"
+                    width="370"
+                    class="product-photo"
                   />
-                  <p class="product-desc">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                  <div class="overlay">
+                    <p class="product-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="figurecaption">
                   <h2 class="product-name">
-                    Проект <span lang="en">Prime</span>
+                    Проєкт <span lang="en">Prime</span>
                   </h2>
                   <p class="product-type">Маркетинг</p>
                 </div>
@@ -185,42 +197,48 @@
 
             <li class="product-card">
               <a href="" class="product-link">
-                <div class="product-card-thumb">
+                <div class="product-thumb">
                   <img
-                  src="./images/product5.jpg"
-                  alt="Изображение проекта Boxes"
-                  width="370"
-                  class="product-photo"
+                    src="./images/product5.jpg"
+                    alt="Изображение проекта Boxes"
+                    width="370"
+                    class="product-photo"
                   />
-                  <p class="product-desc">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                  <div class="overlay">
+                    <p class="product-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="figurecaption">
                   <h2 class="product-name">
-                    Проект <span lang="en">Boxes</span>
+                    Проєкт <span lang="en">Boxes</span>
                   </h2>
-                  <p class="product-type">Приложение</p>
+                  <p class="product-type">Додаток</p>
                 </div>
               </a>
             </li>
 
             <li class="product-card">
               <a href="" class="product-link">
-                <div class="product-card-thumb">
+                <div class="product-thumb">
                   <img
-                  src="./images/product6.jpg"
-                  alt="Изображение проекта веб-сайта Inspiration has no Borders"
-                  width="370"
-                  class="product-photo"
+                    src="./images/product6.jpg"
+                    alt="Изображение проекта веб-сайта Inspiration has no Borders"
+                    width="370"
+                    class="product-photo"
                   />
-                  <p class="product-desc">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                  <div class="overlay">
+                    <p class="product-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="figurecaption">
                   <h2 lang="en" class="product-name">
@@ -233,22 +251,25 @@
 
             <li class="product-card">
               <a href="" class="product-link">
-                <div class="product-card-thumb">
+                <div class="product-thumb">
                   <img
-                  src="./images/product7.jpg"
-                  alt="Изображение проекта издания Limited Edition"
-                  width="370"
-                  class="product-photo"
+                    src="./images/product7.jpg"
+                    alt="Изображение проекта издания Limited Edition"
+                    width="370"
+                    class="product-photo"
                   />
-                  <p class="product-desc">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                  <div class="overlay">
+                    <p class="product-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="figurecaption">
                   <h2 class="product-name">
-                    Издание <span lang="en">Limited Edition</span>
+                    Видання <span lang="en">Limited Edition</span>
                   </h2>
                   <p class="product-type">Дизайн</p>
                 </div>
@@ -257,22 +278,25 @@
 
             <li class="product-card">
               <a href="" class="product-link">
-                <div class="product-card-thumb">
+                <div class="product-thumb">
                   <img
-                  src="./images/product8.jpg"
-                  alt="Изображение проекта LAB"
-                  width="370"
-                  class="product-photo"
+                    src="./images/product8.jpg"
+                    alt="Изображение проекта LAB"
+                    width="370"
+                    class="product-photo"
                   />
-                  <p class="product-desc">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                  <div class="overlay">
+                    <p class="product-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="figurecaption">
                   <h2 class="product-name">
-                    Проект <span lang="en">LAB</span>
+                    Проєкт <span lang="en">LAB</span>
                   </h2>
                   <p class="product-type">Маркетинг</p>
                 </div>
@@ -281,22 +305,25 @@
 
             <li class="product-card">
               <a href="" class="product-link">
-                <div class="product-card-thumb">
+                <div class="product-thumb">
                   <img
-                  src="./images/product9.jpg"
-                  alt="Изображение проекта Приложения Growing Business"
-                  width="370"
-                  class="product-photo"
+                    src="./images/product9.jpg"
+                    alt="Изображение проекта Приложения Growing Business"
+                    width="370"
+                    class="product-photo"
                   />
-                  <p class="product-desc">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                  <div class="overlay">
+                    <p class="product-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
                 </div>
                 <div class="figurecaption">
                   <h2 lang="en" class="product-name">Growing Business</h2>
-                  <p class="product-type">Приложение</p>
+                  <p class="product-type">Додаток</p>
                 </div>
               </a>
             </li>
@@ -308,14 +335,14 @@
     <footer class="footer">
       <div class="container footer-contacts">
         <div class="footer-contacts-box">
-          <h2 class="visually-hidden">Наши контакты</h2>
+          <h2 class="visually-hidden">Наші контакти</h2>
           <a href="./index.html" class="footer-logo">
             <span class="logo-web">Web</span>
             <span class="logo-white">Studio</span>
           </a>
 
           <address class="footer-addresses">
-            <p class="physical-address">г. Киев, пр-т Леси Украинки, 26</p>
+            <p class="physical-address">м. Київ, пр-т Лесі Українки, 26</p>
             <ul class="footer-contacts-list">
               <li class="footer-contact-item">
                 <a href="mailto:info@devstudio.com" class="footer-contact-link"
@@ -332,31 +359,47 @@
         </div>
 
         <div>
-          <h2 class="footer-title">присоединяйтесь</h2>
+          <h2 class="footer-title">приєднуйтесь</h2>
           <ul class="footer-social-links-list">
             <li class="footer-social-link">
-              <a href="" class="social-icon-link">
+              <a
+                href=""
+                class="social-icon-link"
+                aria-label="Посилання на інстаграм"
+              >
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#instagram2"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-link">
-              <a href="" class="social-icon-link">
+              <a
+                href=""
+                class="social-icon-link"
+                aria-label="Посилання на твіттер"
+              >
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#twitter2"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-link">
-              <a href="" class="social-icon-link">
+              <a
+                href=""
+                class="social-icon-link"
+                aria-label="Посилання на фейсбук"
+              >
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#facebook2"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-link">
-              <a href="" class="social-icon-link">
+              <a
+                href=""
+                class="social-icon-link"
+                aria-label="Посилання на лінкд-ін"
+              >
                 <svg class="social-icon">
                   <use href="./images/sprite.svg#linkedin2"></use>
                 </svg>
